sass/popup.scss
/* ... */
.hideoutline * {
  outline: none !important;
}

svg {
  pointer-events: none;
}

.icon {
  @include themify($themes) {
    fill: themed("grey-1");
  }
  vertical-align: middle;
  svg {
    height: 16px;
    width: 16px;
  }
}

#codeClipboard {
  position: absolute;
  top: -1000px;
}

// Header
.header {
  height: 40px;
  line-height: 40px;
  position: relative;
  text-align: center;
  font-size: 14px;
  font-weight: 600;
  letter-spacing: 0.01em;
  z-index: 50;
  @include themify($themes) {
    color: themed("black-1");
    background: themed("white-1");
    border-bottom: themed("grey-2") 1px solid;
    box-shadow: 0 1px 3px themed("grey-shadow");
  }

  .icon {
    @include hover-black;
    cursor: pointer;
    transition: opacity 0.2s ease;

    &:active {
      opacity: 0.6;
    }

    svg {
      vertical-align: sub;
    }
  }
}

#i-menu {
  position: absolute;
  left: 20px;
  bottom: 0;
}

#i-lock {
  position: absolute;
  left: 45px;
  bottom: 0;
}

#i-sync {
  position: absolute;
  left: 70px;
  bottom: 0;
  cursor: default;
  @include themify($themes) {
    fill: themed("grey-2");
  }

  &:hover {
    svg {
      fill: inherit;
    }
  }
}

#i-plus,
#i-qr {
  position: absolute;
  right: 45px;
  bottom: 0;
}

#i-edit {
  position: absolute;
  right: 20px;
  bottom: 0;
}

#i-close {
  position: absolute;
  left: 20px;
  bottom: 0;
}

// Search & Filter
.under-header {
  padding: 0 10px;
  margin-left: 10px;
  font-size: 12px;
  height: 24px;
  line-height: 24px;
  cursor: pointer;
  display: none;
}

#filter {
  @include themify($themes) {
    background: themed("yellow-2");
  }

  &:hover {
    @include themify($themes) {
      background: themed("yellow-1");
    }
  }
}

#search {
  position: relative;
  height: 36px;
  display: flex;
  align-items: center;
  padding: 0 12px;
  @include themify($themes) {
    background: themed("white-1");
    border-bottom: 1px solid themed("grey-2");
  }

  &::before {
    content: "";
    position: absolute;
    left: 12px;
    bottom: 0;
    width: calc(100% - 24px);
    height: 2px;
    background: #1a73e8;
    transform: scaleX(0);
    transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);
    transform-origin: center;
    @include themify($themes) {
      background: themed("blue-1");
    }
  }

  &:focus-within::before {
    transform: scaleX(1);
  }

  input {
    font-family: inherit;
    font-size: 13px;
    background: none;
    border: none;
    width: 100%;
    height: 100%;
    outline: none;
    @include themify($themes) {
      color: themed("black-search");
    }

    &::placeholder {
      @include themify($themes) {
        color: themed("grey-1");
      }
      opacity: 1;
    }
  }

  #searchHint {
    position: absolute;
    top: 50%;
    right: 8px;
    transform: translateY(-50%);
    display: grid;
    grid-template-rows: 4.5px 15px 4.5px;
    grid-template-columns: 15px;
  }

  #searchHintBorder {
    @include themify($themes) {
      color: themed("white-1");
      background: themed("grey-search");
    }
    text-align: center;
    border-radius: 2px;
    line-height: 16px;
    font-weight: 600;
    font-size: 11px;
  }
}

// Codes
#codes {
  height: 442px;
  overflow-x: hidden;
  overflow-y: hidden;
  @include themify($themes) {
    background: themed("grey-background");
  }
  padding-right: 10px;

  .deleteAction {
    @include themify($themes) {
      @include icon-special(20px, themed("red-1"));
    }
    position: absolute;
    top: -8px;
    left: -8px;
    z-index: 10;
    display: none;
  }

  &:hover {
    padding-right: 0;
    overflow-y: scroll;
  }

  &.edit {
    .code {
      @include themify($themes) {
        color: themed("grey-2") !important;
      }
      user-select: none;
      cursor: default;
    }

    .issuer,
    .showqr,
    .showqr.hidden,
    .pin,
    .no-entry {
      display: none;
    }

    .issuerEdit,
    .movehandle,
    #add {
      display: block;
    }

    .deleteAction {
      display: block;
      cursor: pointer;
    }

    .sector,
    .counter {
      position: absolute;
      left: -1000px;
      opacity: 0;
    }
  }

  &.filter .entry[filtered],
  &.search .entry[notSearched] {
    height: 0;
    margin: 0;
    padding: 0;
    opacity: 0;
    border: none;
    overflow: hidden;
    position: absolute;
  }

  &.filter #filter,
  &.search #search {
    display: block;
  }

  &:not(.edit) {
    .entry[unencrypted="true"]:hover .warning {
      height: 24px;
    }

    .code.timeout:not(.hotp) {
      animation: twinkling 1s infinite ease-in-out;
    }
  }

  .no-entry {
    @include themify($themes) {
      color: themed("grey-1");
    }

    margin: 20px;
    text-align: center;

    svg {
      width: 48px;
      height: 48px;
      margin: 20px;
    }
  }
}
/* ... */

